--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.73MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.35MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8040, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇺🇸 美国-4.46MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-20.74MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.07MB/s(Youtube:不良林), server: 116.63.103.11, port: 45758, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
+  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-467.1KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
   - {name: 🇸🇬 新加坡-3.57MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.55MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-6.46MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
   - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.05MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
