--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.73MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-20.74MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.07MB/s(Youtube:不良林), server: 116.63.103.11, port: 45758, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-467.1KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇸🇬 新加坡-3.57MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.68MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.38MB/s(Youtube:不良林), server: 185.172.113.101, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.87MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-3.02MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-228.8KB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.46MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
   - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.46MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
