--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.58MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-3.02MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-20.74MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.72MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.96MB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.96MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.32MB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-12.13MB/s(Youtube:不良林), server: 14.119.87.180, port: 45149, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 14.119.87.180}}
+  - {name: 🇨🇳 中国-875.5KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇨🇳 中国-4.15MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-6.21MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇫🇷 法国-2.20MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-3.93MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
