--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.32MB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-12.13MB/s(Youtube:不良林), server: 14.119.87.180, port: 45149, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 14.119.87.180}}
-  - {name: 🇨🇳 中国-875.5KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇨🇳 中国-4.15MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-6.21MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.55MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.94MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-228.8KB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.15MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 台湾-7.34MB/s(Youtube:不良林), server: tw.suntory.lol, port: 38513, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: tw.suntory.lol, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇫🇷 法国-2.20MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
@@ -66,17 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
@@ -87,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
@@ -103,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
@@ -128,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-875.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-228.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
