--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.07MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.24MB/s(Youtube:不良林), server: 185.172.113.101, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-3.67MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.17MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇦 加拿大-1.94MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-12.76MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.58MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.50MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-3.00MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-743.9KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇩🇪 德国-436.7KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇫🇷 法国-1.89MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-236.0KB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-743.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-743.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-743.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-743.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-743.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-743.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇩🇪 德国-743.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-436.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-236.0KB/s(Youtube:不良林)
 rules:
